--- a/.tekton/kserve-router-test-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-router-test-hermetic-poc-pull-request.yaml
@@ -28,6 +28,8 @@ spec:
     value: 5d
   - name: dockerfile
     value: router.Dockerfile
+  - name: prefetch-input
+    value: '{"type": "gomod", "path": "."}'
   - name: hermetic
     value: "true"
   pipelineSpec:
