--- a/.tekton/kserve-agent-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-agent-hermetic-poc-pull-request.yaml
@@ -94,10 +94,11 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
+      value: '{"type": "gomod", "path": "."}' 
     - default: ""
       description: Build dependencies to be prefetched by Cachi2
       name: prefetch-input
