--- a/.tekton/kserve-agent-hermetic-poc-push.yaml
+++ b/.tekton/kserve-agent-hermetic-poc-push.yaml
@@ -91,7 +91,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
@@ -99,6 +99,7 @@ spec:
       description: Build dependencies to be prefetched by Cachi2
       name: prefetch-input
       type: string
+      value: '{"type": "gomod", "path": "."}'
     - default: "false"
       description: Java build
       name: java
