--- a/.tekton/kserve-router-test-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-router-test-hermetic-poc-pull-request.yaml
@@ -28,10 +28,6 @@ spec:
     value: 5d
   - name: dockerfile
     value: router.Dockerfile
-  - name: prefetch-input
-    value: '{"type": "gomod", "path": "."}'
-  - name: hermetic
-    value: "true"
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -98,7 +94,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
@@ -106,6 +102,7 @@ spec:
       description: Build dependencies to be prefetched by Cachi2
       name: prefetch-input
       type: string
+      value: '{"type": "gomod", "path": "."}'
     - default: "false"
       description: Java build
       name: java
