--- a/.tekton/kserve-agent-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-agent-hermetic-poc-pull-request.yaml
@@ -28,6 +28,8 @@ spec:
     value: 5d
   - name: dockerfile
     value: agent.Dockerfile
+  - name: prefetch-input
+    value: '{"type": "gomod", "path": "."}
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -94,7 +96,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
