--- a/.tekton/kserve-agent-hermetic-poc-push.yaml
+++ b/.tekton/kserve-agent-hermetic-poc-push.yaml
@@ -25,6 +25,8 @@ spec:
     value: quay.io/redhat-user-workloads/rhoai-tenant/kserve-agent/kserve-agent-hermetic-poc:{{revision}}
   - name: dockerfile
     value: agent.Dockerfile
+  - name: prefetch-input
+    value: '{"type": "gomod", "path": "."}' 
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -91,7 +93,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
