--- a/.tekton/kserve-agent-test-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-agent-test-hermetic-poc-pull-request.yaml
@@ -28,6 +28,8 @@ spec:
     value: 5d
   - name: dockerfile
     value: agent.Dockerfile
+  - name: prefetch-input
+    value: '{"type": "gomod", "path": "."}'
   pipelineSpec:
     finally:
     - name: show-sbom
