--- a/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
+++ b/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
@@ -6,8 +6,11 @@ metadata:
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "test-hermetic-poc"
+    pipelinesascode.tekton.dev/on-cel-expression: 
+      event == "push" 
+      && target_branch == "test-hermetic-poc"
+      && ( "python/**".pathChanged() || ".tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml".pathChanged() ) 
+
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: kserve-storage-initializer
@@ -27,6 +30,8 @@ spec:
     value: storage-initializer.Dockerfile
   - name: path-context
     value: python
+  - name: prefetch-input
+    value: '{"type": "pip", "path": "."}'
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -93,7 +98,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
