--- a/.tekton/kserve-agent-test-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-agent-test-hermetic-poc-pull-request.yaml
@@ -7,8 +7,10 @@ metadata:
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "test-hermetic-poc"
+    pipelinesascode.tekton.dev/on-cel-expression: 
+      event == "pull_request" 
+      && target_branch == "test-hermetic-poc"
+      && ( !".tekton/**".pathChanged() || ".tekton/kserve-agent-test-hermetic-poc-pull-request.yaml".pathChanged() ) 
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: kserve-agent
