--- a/.tekton/kserve-router-test-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-router-test-hermetic-poc-pull-request.yaml
@@ -7,8 +7,10 @@ metadata:
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "test-hermetic-poc"
+    pipelinesascode.tekton.dev/on-cel-expression: 
+      event == "pull_request" 
+      && target_branch == "test-hermetic-poc"
+      && ( !".tekton/**".pathChanged() || ".tekton/kserve-router-test-hermetic-poc-pull-request.yaml".pathChanged() ) 
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: kserve-router
@@ -28,6 +30,8 @@ spec:
     value: 5d
   - name: dockerfile
     value: router.Dockerfile
+  - name: prefetch-input
+    value: '{"type": "gomod", "path": "."}'
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -94,7 +98,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
