--- a/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
+++ b/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
@@ -30,8 +30,10 @@ spec:
     value: storage-initializer.Dockerfile
   - name: path-context
     value: python
+  - name: hermetic
+    value: "true"
   - name: prefetch-input
-    value: '{"type": "pip", "path": "."}'
+    value: rpm
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -191,6 +193,8 @@ spec:
       params:
       - name: input
         value: $(params.prefetch-input)
+      - name: dev-package-managers
+        value: "true"
       runAfter:
       - clone-repository
       taskRef:
@@ -476,4 +480,3 @@ spec:
     secret:
       secretName: '{{ git_auth_secret }}'
 status: {}
-#restart
