updating the rpm path

--- a/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
+++ b/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
@@ -33,7 +33,8 @@ spec:
   - name: hermetic
     value: "true"
   - name: prefetch-input
-    value: rpm
+    value: |
+    {"type": "rpm", "path": "python"}
   pipelineSpec:
     finally:
     - name: show-sbom
