updating the rpm path

--- a/.tekton/kserve-storage-initializer-test-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-storage-initializer-test-hermetic-poc-pull-request.yaml
@@ -35,7 +35,7 @@ spec:
   - name: hermetic
     value: "true"
   - name: prefetch-input
-    value: {"type": "rpm", "path": "python"}
+    value: '{"type": "rpm", "path": "python"}'
   pipelineSpec:
     finally:
     - name: show-sbom
