--- a/.tekton/kserve-agent-test-hermetic-poc-push.yaml
+++ b/.tekton/kserve-agent-test-hermetic-poc-push.yaml
@@ -27,6 +27,8 @@ spec:
     value: quay.io/redhat-user-workloads/rhoai-tenant/kserve-agent/kserve-agent-test-hermetic-poc:{{revision}}
   - name: dockerfile
     value: agent.Dockerfile
+  - name: hermetic
+    value: "true"
   - name: prefetch-input
     value: '{"type": "gomod", "path": "."}'
   pipelineSpec:
