Adding rpm changes for agent

--- a/.tekton/kserve-agent-test-hermetic-poc-push.yaml
+++ b/.tekton/kserve-agent-test-hermetic-poc-push.yaml
@@ -30,7 +30,7 @@ spec:
   - name: hermetic
     value: "true"
   - name: prefetch-input
-    value: '{"type": "gomod", "path": "."}'
+    value: '[{"type": "gomod", "path": "."}, {"type": "rpm"}]'
   pipelineSpec:
     finally:
     - name: show-sbom
