--- a/.tekton/kserve-agent-test-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-agent-test-hermetic-poc-pull-request.yaml
@@ -33,7 +33,7 @@ spec:
   - name: hermetic
     value: "true"
   - name: prefetch-input
-    value: '{"type": "gomod", "path": "."}'
+    value: '[{"type": "gomod", "path": "."}, {"type": "rpm"}]'
   pipelineSpec:
     finally:
     - name: show-sbom
