--- a/.tekton/kserve-storage-initializer-test-hermetic-poc-pull-request.yaml
+++ b/.tekton/kserve-storage-initializer-test-hermetic-poc-pull-request.yaml
@@ -36,7 +36,7 @@ spec:
     value: "true"
   - name: prefetch-input
     value: |
-     [{"type": "pip", "path": "python/kserve", "requirements_files": ["requirements.txt"]}, {"type": "rpm", "path": "python"}]
+     [{"type": "rpm", "path": "python"}, {"type": "pip", "path": "python/kserve", "requirements_files": ["requirements.txt"]}]
   pipelineSpec:
     finally:
     - name: show-sbom
