--- a/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
+++ b/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
@@ -35,7 +35,7 @@ spec:
     value: "true"
   - name: prefetch-input
     value: |
-     [{"type": "pip", "path": "python/kserve", "requirements_files": ["requirements.txt"]}, {"type": "rpm", "path": "python"}]
+     [{"type": "rpm", "path": "python"}, {"type": "pip", "path": "python/kserve", "requirements_files": ["requirements.txt"], "allow_binary": "true"}]
   pipelineSpec:
     finally:
     - name: show-sbom
