[RHOAIENG-10451] - storage-initializer hermetic build
Issues fixed by this commit:
- Error: FetchError: exception_name: OSError, details: [Errno 28] No space left on device
- error: No available modular metadata for modular package 'python39-3.9.19-1.module+el8.10.0+21815+bb024982.x86_64'
- ERROR: No matching distribution found for poetry==1.7.1
	- and more missing dependencies, added the build-requirements-build.txt

Signed-off-by: Spolti <fspolti@redhat.com>

--- a/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
+++ b/.tekton/kserve-storage-initializer-test-hermetic-poc-push.yaml
@@ -35,7 +35,7 @@ spec:
     value: "true"
   - name: prefetch-input
     value: |
-     [{"type": "rpm", "path": "python"}, {"type": "pip", "path": "python/kserve", "requirements_files": ["requirements.txt"], "allow_binary": "true"}]
+     [{"type": "rpm", "path": "python"}, {"type": "pip", "path": "python/kserve", "requirements_files": ["requirements-build.txt", "requirements.txt"], "allow_binary": "true"}]
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -476,7 +476,7 @@ spec:
         - ReadWriteOnce
         resources:
           requests:
-            storage: 1Gi
+            storage: 5Gi
       status: {}
   - name: git-auth
     secret:
