--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -34,6 +34,7 @@ exclude = ["kserve/storage/test"]
 python = ">=3.9,<3.13"
 uvicorn = { version = "^0.30.6", extras = ["standard"] }
 fastapi = ">=0.115.3"
+starlette = "0.49.1"
 cloudevents = "^1.6.2"
 six = "^1.16.0"
 kubernetes = ">=23.3.0"
