--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -31,7 +31,7 @@ packages = [{ include = "kserve" }]
 exclude = ["kserve/storage/test"]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = ">=3.10,<3.13"
 uvicorn = { version = "^0.30.6", extras = ["standard"] }
 fastapi = ">=0.115.3"
 cloudevents = "^1.6.2"
@@ -51,6 +51,8 @@ tabulate = "^0.9.0"
 pandas =  "^2.2.0"
 pydantic = "^2.5.0"
 pyyaml = "^6.0.0"
+# CVE-2025-66418 urllib3: Unbounded decompression chain leads to resource exhaustion
+urllib3 = ">=2.6.0"
 
 # Storage dependencies. They can be opted into by apps.
 requests = { version = "^2.32.2", optional = true }
