--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -52,8 +52,8 @@ tabulate = "^0.9.0"
 pandas =  "^2.2.0"
 pydantic = "^2.5.0"
 pyyaml = "^6.0.0"
-# CVE-2025-66418 urllib3: Unbounded decompression chain leads to resource exhaustion
-urllib3 = ">=2.6.0"
+# CVE-2026-21441 urllib3: vulnerable to decompression-bomb safeguard bypass when following HTTP redirects (streaming API)
+urllib3 = ">=2.6.3"
 # CVE-2025-69223 AIOHTTP's HTTP Parser auto_decompress feature is vulnerable to zip bomb
 aiohttp = ">=3.13.3"
 
